Bump compilation from 1.6 to 1.8