@@ -138,24 +138,6 @@
         </executions>
       </plugin>
     </plugins>
-    <pluginManagement>
-      <plugins>
-        <plugin>
-          <artifactId>maven-compiler-plugin</artifactId>
-          <executions>
-            <execution>
-              <id>default-testCompile</id>
-              <configuration>
-                <!-- Java 7 is needed for running tests in eclipse because of test dependence on
-                  executor plugin which targets Java 7 in order to run its own ForkJoinPool tests -->
-                <source>1.7</source>
-                <target>1.7</target>
-              </configuration>
-            </execution>
-          </executions>
-        </plugin>
-      </plugins>
-    </pluginManagement>
   </build>
 
   <profiles>
@@ -204,63 +186,6 @@
       </dependencies>
     </profile>
     <profile>
-      <id>test-java6</id>
-      <activation>
-        <property>
-          <name>glowroot.test.java6</name>
-        </property>
-      </activation>
-      <build>
-        <plugins>
-          <plugin>
-            <artifactId>maven-compiler-plugin</artifactId>
-            <configuration>
-              <testExcludes>
-                <!-- Tomcat's websocket support requires Java 7 -->
-                <exclude>org/glowroot/agent/plugin/spring/WebSocketIT.java</exclude>
-                <!-- just the presence of this class on classpath causes issues on some spring
-                  versions due to https://jira.spring.io/browse/SPR-12238 -->
-                <exclude>org/glowroot/agent/plugin/spring/WebSocketConfig.java</exclude>
-              </testExcludes>
-            </configuration>
-          </plugin>
-        </plugins>
-        <pluginManagement>
-          <plugins>
-            <plugin>
-              <artifactId>maven-compiler-plugin</artifactId>
-              <executions>
-                <execution>
-                  <id>default-testCompile</id>
-                  <configuration>
-                    <source>1.8</source>
-                    <target>1.8</target>
-                  </configuration>
-                </execution>
-              </executions>
-            </plugin>
-          </plugins>
-        </pluginManagement>
-      </build>
-    </profile>
-    <profile>
-      <id>java6or7</id>
-      <activation>
-        <jdk>[1.6,1.8)</jdk>
-      </activation>
-      <build>
-        <plugins>
-          <plugin>
-            <artifactId>maven-failsafe-plugin</artifactId>
-            <configuration>
-              <!-- this is needed when building with Java 6 or 7 -->
-              <argLine>-XX:MaxPermSize=128m</argLine>
-            </configuration>
-          </plugin>
-        </plugins>
-      </build>
-    </profile>
-    <profile>
       <!-- this profile is cumulative on top of spring-4.x -->
       <id>spring-5.1.x</id>
       <properties>
@@ -303,19 +228,6 @@
                   <sources>
                     <source>src/test/spring-5.1.x/java</source>
                   </sources>
-                </configuration>
-              </execution>
-            </executions>
-          </plugin>
-          <plugin>
-            <artifactId>maven-compiler-plugin</artifactId>
-            <executions>
-              <execution>
-                <id>default-testCompile</id>
-                <configuration>
-                  <!-- spring 5.x requires Java 8+ -->
-                  <source>1.8</source>
-                  <target>1.8</target>
                 </configuration>
               </execution>
             </executions>
@@ -366,19 +278,6 @@
                   <sources>
                     <source>src/test/spring-5.0.x/java</source>
                   </sources>
-                </configuration>
-              </execution>
-            </executions>
-          </plugin>
-          <plugin>
-            <artifactId>maven-compiler-plugin</artifactId>
-            <executions>
-              <execution>
-                <id>default-testCompile</id>
-                <configuration>
-                  <!-- spring 5.x requires Java 8+ -->
-                  <source>1.8</source>
-                  <target>1.8</target>
                 </configuration>
               </execution>
             </executions>
